# vtk-reader

./: CMakeLists.txt  Main.cxx  MainWindow.cxx  MainWindow.h  MainWindow.ui  README.md  Resources.qrc
